[package]
name = "gitlab-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde", "clock"] }